src/test/ui/rfc-2565-param-attrs/param-attrs-2018.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: expected one of `:` or `@`, found `)`
  --> $DIR/param-attrs-2018.rs:5:41
   |
LL | trait Trait2015 { fn foo(#[allow(C)] i32); }
   |                                         ^ expected one of `:` or `@` here
=======
error: expected one of `:`, `@`, or `|`, found `)`
  --> $DIR/param-attrs-2018.rs:3:41
   |
LL | trait Trait2015 { fn foo(#[allow(C)] i32); }
   |                                         ^ expected one of `:`, `@`, or `|` here
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
   = note: anonymous parameters are removed in the 2018 edition (see RFC 1685)
help: if this was a parameter name, give it a type
   |
LL | trait Trait2015 { fn foo(#[allow(C)] i32: TypeName); }
   |                                      ^^^^^^^^^^^^^
help: if this is a type, explicitly ignore the parameter name
   |
LL | trait Trait2015 { fn foo(#[allow(C)] _: i32); }
   |                                      ^^^^^^

error: aborting due to previous error

